[project]
name = "zpd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "ipykernel>=7.2.0",
    "jupyter-dash>=0.4.2",
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torcheval>=0.0.7",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
